--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="theme-color" content="#000000">
-	<title>React App</title>
+	<title>Aseguradora</title>
 </head>
 
 <body>
-	<noscript>
-		You need to enable JavaScript to run this app.
-	</noscript>
 	<div id="root"></div>
-<script type="module" src="/src/index.jsx"></script></body>
+	<script type="module" src="/src/index.jsx"></script>
+</body>
